--- a/src/main/resources/templates/site/header.html
+++ b/src/main/resources/templates/site/header.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:fragment="header">
-<header role="header">
-    <div class="container">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="header(title,keywords)">
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta http-equiv="Cache-Control" content="no-transform"/>
+    <meta http-equiv="Cache-Control" content="no-siteapp"/>
+    <meta name="keywords" th:content="${keywords ?: commons.site_option('site_keywords')}"/>
+    <meta name="description" th:content="${description ?:commons.site_option('site_description')}"/>
+    <link rel="shortcut icon" th:href="@{/site/images/favicon.png}"/>
+    <link rel="apple-touch-icon" th:href="@{/site/images/apple-touch-icon.png}"/>
+    <title>
+        <th:block th:text="${title ?: '首页'}+' - '+${commons.site_option('site_title','My Blog')}"></th:block>
+    </title>
+    <link th:href="@{//cdn.bootcss.com/highlight.js/9.9.0/styles/xcode.min.css}" rel="stylesheet"/>
+    <link th:href="@{/site/css/style.min.css}" rel="stylesheet"/>
+    <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
 
-        <!-- logo -->
-
-        <h1> <a th:href="@{/}" title="avana LLC"><img th:src="@{http://img.winterchen.com/BF6AC5E5-C8D7-4841-B3ED-9D898586D5FF-9703-0000073B1BF8A7F8_tmp.PNG}" style="width: 66px;" title="avana LLC" alt="avana LLC"/></a> </h1>
-
-        <!-- logo -->
-
-        <!-- nav -->
-
-        <nav role="header-nav" class="navy">
+    <!--[if lt IE 9]>
+    <script src="//cdn.bootcss.com/html5shiv/r29/html5.min.js"></script>
+    <script src="//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body gtools_scp_screen_capture_injected="true" th:class="${is_post}?'':'bg-grey'">
+<!--[if lt IE 8]>
+<div class="browsehappy" role="dialog">
+    当前网页 <strong>不支持</strong> 你正在使用的浏览器. 为了正常的访问, 请 <a href="http://browsehappy.com/" target="_blank">升级你的浏览器</a>。
+</div>
+<![endif]-->
+<header id="header" class="header bg-white">
+    <div class="navbar-container">
+        <a th:href="${commons.site_url('')}" class="navbar-logo">
+            <img th:src="@{/site/images/logo.png}" alt="首页"/>
+        </a>
+        <div class="navbar-menu">
+            <a th:href="${commons.site_url('/archives')}">归档</a>
+            <a th:href="${commons.site_url('/links')}">友链</a>
+            <a th:href="${commons.site_url('/about')}">关于</a>
+        </div>
+        <div class="navbar-search" onclick="">
+            <span class="icon-search"></span>
+            <form role="search" onsubmit="return false;">
+                <span class="search-box">
+                    <input type="text" id="search-inp" class="input" placeholder="搜索..." maxlength="30"
+                           autocomplete="off"/>
+                </span>
+            </form>
+        </div>
+        <div class="navbar-mobile-menu" onclick="">
+            <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
-                <li th:class="${active == 'work' ? 'nav-active':''}"><a th:href="@{/}" title="Work">Work</a></li>
-                <li th:class="${active == 'about' ? 'nav-active':''}"><a  th:href="@{/about}" title="About">About</a></li>
-                <li th:class="${active == 'blog' ? 'nav-active':''}"><a th:href="@{/blog/index}" title="Blog">Blog</a></li>
+                <li><a th:href="${commons.site_url('/archives')}">归档</a></li>
+                <li><a th:href="${commons.site_url('/links')}">友链</a></li>
+                <li><a th:href="${commons.site_url('/about')}">关于</a></li>
             </ul>
-        </nav>
-
-        <!-- nav -->
-
+        </div>
     </div>
 </header>
+</body>
 </html>
