--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -4,77 +4,36 @@
 <div th:replace="site/head::head(${commons.site_title()},${commons.google_site_verification()}, ${commons.baidu_site_verification()})"></div>
 
 <body>
-
-<!-- header -->
-
-<div th:replace="site/header::header"></div>
-
-<!-- header --> 
-
-<!-- main -->
-
-<main role="main-home-wrapper" class="container">
-  <div class="row">
-    <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
-      <article role="pge-title-content">
-        <header>
-          <h2><span>Luis</span> A Java Developer.</h2>
-        </header>
-        <p>maker of things for the web app, always focused on elegant simplicity, relentlessly learning by making mistakes.</p>
-      </article>
-    </section>
-    <th:block th:each="archive,archiveStat : ${archives.list}">
-      <th:block th:if="${archiveStat.index == 1}">
-        <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
-          <figure class="effect-oscar"> <img th:src="${commons.show_thumb(archive.content)}" alt="" class="img-responsive"/>
-            <figcaption>
-              <h2><th:block th:text="${archive.title}" ></th:block></h2>
-              <p><th:block th:utext="${commons.fmtdate_en(archive.created)}"></th:block></p>
-              <a th:href="${commons.photoPermalink(archive.cid)}">View more</a> </figcaption>
-          </figure>
-        </section>
-      </th:block>
-    </th:block>
-
-    <!-- left -->
-    <div class="clearfix"></div>
-    <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
-      <ul class="grid-lod effect-2" id="grid">
-        <th:block th:each="archive,archiveStat : ${archives.list}">
-          <th:block th:if="${archiveStat.index != 1 && archiveStat.index % 2 == 0}">
-            <li>
-              <figure class="effect-oscar"> <img th:src="${commons.show_thumb(archive.content)}" alt="" class="img-responsive"/>
-                <figcaption>
-                  <h2><th:block th:text="${archive.title}" ></th:block></h2>
-                  <p><th:block th:utext="${commons.fmtdate_en(archive.created)}"></th:block></p>
-                  <a th:href="${commons.photoPermalink(archive.cid)}">View more</a> </figcaption>
-              </figure>
-            </li>
-          </th:block>
-        </th:block>
-      </ul>
-    </section>
-
-    <!-- right -->
-    <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
-      <ul class="grid-lod effect-2" id="grid">
-        <th:block th:each="archive,archiveStat : ${archives.list}">
-          <th:block th:if="${archiveStat.index != 1 && archiveStat.index % 2 != 0}">
-            <li>
-              <figure class="effect-oscar"> <img th:src="${commons.show_thumb(archive.content)}" alt="" class="img-responsive"/>
-                <figcaption>
-                  <h2><th:block th:text="${archive.title}" ></th:block></h2>
-                  <p><th:block th:utext="${commons.fmtdate_en(archive.created)}"></th:block></p>
-                  <a th:href="${commons.photoPermalink(archive.cid)}">View more</a> </figcaption>
-              </figure>
-            </li>
-          </th:block>
-        </th:block>
-      </ul>
-    </section>
-    <div class="clearfix"></div>
+<div class="main-content index-page clearfix">
+  <div class="post-lists">
+    <div class="post-lists-body">
+      <div class="post-list-item" th:each="article: ${articles.list}">
+        <div class="post-list-item-container">
+          <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
+             th:style="'background-image:url('+@{${commons.show_thumb(article)}}+');'">
+            <dir class="item-desc" th:text="${article.tags}"></dir>
+          </a>
+          <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>
+          <div class="item-slant"></div>
+          <div class="item-label">
+            <div class="item-title"><a th:href="${commons.permalink(article)}"
+                                       th:text="${article.title}"></a>
+            </div>
+            <div class="item-meta clearfix">
+              <div th:class="'item-meta-ico '+ ${commons.show_icon(article.cid)}"
+                   th:style="'background: url('+@{/user/img/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
+              <div class="item-meta-cat" th:utext="${commons.show_categories(article.categories)}">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</main>
+  <div class="lists-navigator clearfix">
+    <div th:replace="comm/macros::pageNav(${articles},'←','→','page')"></div>
+  </div>
+</div>
 
 <!-- main --> 
 
