--- a/src/main/resources/templates/site/footer.html
+++ b/src/main/resources/templates/site/footer.html
@@ -35,10 +35,10 @@
             <div class="meta-item meta-copyright">
                 <div class="meta-copyright-info">
                     <div class="info-text">
-                        <a href="http://www.54tianzhisheng.cn" target="_blank" style="display: block;margin: 0 auto;"
-                           class="info-logo">
-                            <img style="display: block;margin: 0 auto;" th:src="@{/site/images/logo.png}"
-                                 th:alt="${commons.site_title()}"/>
+                        <a class="info-logo" href="http://www.54tianzhisheng.cn" style="display: block;margin: 0 auto;"
+                           target="_blank">
+                            <img style="display: block;margin: 0 auto;" th:alt="${commons.site_title()}"
+                                 th:src="@{/site/images/logo.png}"/>
                         </a>
                         <br/>
                         <p>&copy; 版权所有 <a href="https://github.com/zhisheng17/blog" target="_blank"
