--- a/src/main/resources/templates/site/comments.html
+++ b/src/main/resources/templates/site/comments.html
@@ -1,106 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:fragment="comments">
 <body>
-
-<div th:if="${article.allowComment}" class="comment-allow">
-    <div id="comments-content" th:if="${article}!=null">
-        <div th:id="${article.cid ?: 0}" class="comments-pan">
-
-            <h3>
-                <th:block th:text="${article.commentsNum ?: 0}"></th:block>
-                Comments
-            </h3>
-
-            <ul th:if="${comments}" class="comments-reply">
-                <th:block th:each="comment :${comments}">
-                    <li th:id="'li-comment-'+${comment.coid}">
-
-                        <figure th:id="'comment-'+${comment.coid}">
-
-                            <img th:src="@{${commons.gravatar(comment.mail)}(s='80',r='G',d='')}" alt=""
-                                 class="img-responsive"/>
-
-                        </figure>
-
-                        <section>
-
-                            <h4><a th:href="${comment.url}" target="blank" th:text="${comment.author}"></a></h4>
-
-                            <div class="date-pan">
-                                <th:block th:text="${commons.fmtdate(comment.created)}"></th:block>
-                            </div>
-
-                            <th:block th:utext="${commons.article(comment.content)}"></th:block>
-
-                        </section>
-
-
-                    </li>
+<div th:if="${article}!=null">
+    <div class="comment-container" th:id="${article.cid ?: 0}">
+        <div class="clearfix" id="comments">
+            <div th:if="${article.allowComment}">
+                <span class="response">
+                <th:block th:if="${session.login_user}">
+                    Hi，<a data-no-instant="" th:href="${session.login_user.homeUrl}"
+                          th:text="${session.login_user.username}"></a>
+                    如果你想 <a data-no-instant="" href="/logout" title="注销">注销</a> ?
                 </th:block>
+            </span>
+                <form class="comment-form" id="comment-form" method="post" onsubmit="return TaleComment.subComment();"
+                      role="form">
+                    <input id="coid" name="coid" type="hidden"/>
+                    <input id="cid" name="cid" th:value="${article.cid}" type="hidden"/>
+                    <input name="_csrf_token" th:value="${_csrf_token}" type="hidden"/>
+                    <input class="form-control input-control clearfix" id="author" maxlength="12" name="author"
+                           placeholder="姓名 (*)"
+                           type="text"
+                    />
+                    <input class="form-control input-control clearfix" id="mail" name="mail" placeholder="邮箱 (*)"
+                           type="email"
+                    />
+                    <input class="form-control input-control clearfix" id="url" name="url" placeholder="网址 (http://)"
+                           type="url"
+                    />
+                    <textarea class="form-control" id="textarea" maxlength="2000" minlength="5"
+                              name="text" placeholder="以上信息可以为空,评论不能为空哦!"
+                              required="required"></textarea>
+                    <button class="submit" id="misubmit" type="submit">提交</button>
+                </form>
+            </div>
+            <div th:unless="${article.allowComment}">
+                <span class="response">评论已关闭.</span>
+            </div>
 
-
-            </ul>
-            <div class="commentys-form">
-
-                <h4>Leave a comment</h4>
-
-
-                <div class="row">
-
-                    <form  id="comment-form" class="comment-form" role="form"
-                          onsubmit="return TaleComment.subComment();">
-
-                        <input type="hidden" name="coid" id="coid"/>
-                        <input type="hidden" name="cid" id="cid" th:value="${article.cid}"/>
-                        <input type="hidden" name="_csrf_token" th:value="${_csrf_token}"/>
-                        <div class="col-xs-12 col-sm-4 col-md-4">
-
-                            <input type="text" name="author" maxlength="12" id="author"
-                                   placeholder="姓名 (*)"
-                            />
-
-                        </div>
-
-                        <div class="col-xs-12 col-sm-4 col-md-4">
-
-                            <input type="email" name="mail" id="mail"
-                                   placeholder="邮箱 (*)"
-                            />
-
-                        </div>
-
-                        <div class="col-xs-12 col-sm-4 col-md-4">
-
-                            <input type="url" name="url" id="url"
-                                   placeholder="网址 (http://)"
-                            />
-
-                        </div>
-
-                        <div class="clearfix"></div>
-
-                        <div class="col-xs-12 col-sm-12 col-md-12">
-
-                                <textarea name="text" id="textarea" placeholder="以上信息可以为空,评论不能为空哦!"
-                                          required="required" minlength="5"
-                                          maxlength="2000"></textarea>
-                        </div>
-
-                        <div class="text-center">
-
-                            <input type="submit" value="Post Comment" id="misubmit"/>
-
-                        </div>
-
-
-                    </form>
+            <div th:if="${comments}">
+                <ol class="comment-list">
+                    <th:block th:each="comment :${comments.list}">
+                        <li class="comment-body comment-parent comment-odd" th:id="'li-comment-'+${comment.coid}">
+                            <div th:id="'comment-'+${comment.coid}">
+                                <div class="comment-view" onclick="">
+                                    <div class="comment-header">
+                                        <!--设置get请求的参数-->
+                                        <img class="avatar"
+                                             height="80"
+                                             th:src="@{${commons.gravatar(comment.mail)}(s='80',r='G',d='')}"
+                                             th:title="${comment.author}" width="80"/>
+                                        <span class="comment-author">
+                                <a href="##" rel="external nofollow"
+                                   th:text="${comment.author}"></a>
+                            </span>
+                                    </div>
+                                    <div class="comment-content">
+                                        <span class="comment-author-at"></span>
+                                        <p th:utext="${commons.article(comment.content)}"></p>
+                                    </div>
+                                    <div class="comment-meta">
+                                        <time class="comment-time" th:text="${commons.fmtdate(comment.created)}"></time>
+                                        <span class="comment-reply">
+                            </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </th:block>
+                </ol>
+                <div class="lists-navigator clearfix">
+                    <ol class="page-navigator">
+                        <th:block th:if="${comments.hasPreviousPage}">
+                            <li class="prev"><a th:href="'?cp='+${comments.prePage}+'#comments'">←</a></li>
+                        </th:block>
+                        <th:block th:each="navIndex : ${comments.navigatepageNums}">
+                            <li th:class="${comments.pageNum}==${navIndex}?'current':''"><a
+                                    th:href="'?cp='+${navIndex}+'#comments'" th:text="${navIndex}"></a>
+                            </li>
+                        </th:block>
+                        <th:block th:if="${comments.hasNextPage}">
+                            <li class="next"><a th:href="'?cp='+${comments.nextPage}+'#comments'">→</a></li>
+                        </th:block>
+                    </ol>
 
                 </div>
-
-
             </div>
         </div>
     </div>
 </div>
 </body>
+<div th:replace="comm/tale_comment::tale_comment"></div>
 </html>
