--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div th:replace="site/header::header(null,null)"></div>
 <body>
@@ -7,19 +7,19 @@
     <div class="post-lists-body">
       <div class="post-list-item" th:each="article: ${articles.list}">
         <div class="post-list-item-container">
-          <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
+          <a class="item-thumb  bg-deepgrey" th:href="${commons.blogPermalink(article.cid)}"
              th:style="'background-image:url('+@{${commons.show_thumb(article)}}+');'">
             <dir class="item-desc" th:text="${article.tags}"></dir>
           </a>
           <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>
           <div class="item-slant"></div>
           <div class="item-label">
-              <div class="item-title"><a th:href="${commons.blogPermalink(article.cid)}"
-                                         th:text="${article.title}"></a>
+            <div class="item-title"><a th:href="${commons.blogPermalink(article.cid)}"
+                                       th:text="${article.title}"></a>
             </div>
             <div class="item-meta clearfix">
-                <div th:class="'item-meta-ico '+ ${commons.blogPermalink(article.cid)}"
-                     th:style="'background: url('+@{/site/images/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
+              <div th:class="'item-meta-ico '+ ${commons.show_icon(article.cid)}"
+                   th:style="'background: url('+@{/site/images/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
               <div class="item-meta-cat" th:utext="${commons.show_categories(article.categories)}">
               </div>
             </div>
@@ -32,6 +32,7 @@
     <div th:replace="comm/macros::pageNav(${articles},'←','→','page')"></div>
   </div>
 </div>
-</body>
 <div th:replace="site/footer::footer"></div>
+</body>
+
 </html>
