增加项目路径

--- a/src/main/resources/templates/admin/article_edit.html
+++ b/src/main/resources/templates/admin/article_edit.html
@@ -168,12 +168,12 @@
             width   : "90%",
             height  : 640,
             syncScrolling : "single",
-            path    : "/admin/editormd/lib/",//注意2：你的路径
+            path: "/blog/admin/editormd/lib/",//注意2：你的路径
             saveHTMLToTextarea : true,//注意3：这个配置，方便post提交表单
             /**上传图片相关配置如下*/
             imageUpload: true,
             imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"], //图片上传格式
-            imageUploadURL: "/admin/attach/uploadfile",
+            imageUploadURL: "/blog/admin/attach/uploadfile",
             onload: function (obj) { //上传成功之后的回调
             }
         });
