--- a/src/main/resources/templates/admin/attach.html
+++ b/src/main/resources/templates/admin/attach.html
@@ -119,7 +119,7 @@
 
     $("#dropzone").dropzone({
         paramName: "file",
-        url: "/admin/attach/upload",
+        url: "/blog/admin/attach/upload",
         maxFilesize: 10,
         init: function () {
             this.on("success", function (file, msg) {
@@ -150,7 +150,7 @@
             title: '确定删除该附件吗?',
             then: function () {
                 tale.post({
-                    url: '/admin/attach/delete',
+                    url: '/blog/admin/attach/delete',
                     data: {id: id},
                     success: function (result) {
                         if (result && result.code == 'success') {
