--- a/src/main/resources/templates/admin/comment_list.html
+++ b/src/main/resources/templates/admin/comment_list.html
@@ -77,7 +77,7 @@
             title: '确定删除该评论吗?',
             then: function () {
                 tale.post({
-                    url: '/admin/comments/delete',
+                    url: '/blog/admin/comments/delete',
                     data: {coid: coid},
                     success: function (result) {
                         if (result && result.code == 'success') {
@@ -96,7 +96,7 @@
             title: '确定审核通过吗?',
             then: function () {
                 tale.post({
-                    url: '/admin/comments/status',
+                    url: '/blog/admin/comments/status',
                     data: {coid: coid, status: "approved"},
                     success: function (result) {
                         if (result && result.code == 'success') {
