--- a/src/main/resources/templates/admin/links.html
+++ b/src/main/resources/templates/admin/links.html
@@ -99,7 +99,7 @@
         submitHandler: function (form) {
             var params = $("#linkForm").serialize();
             tale.post({
-                url : '/admin/links/save',
+                url: '/blog/admin/links/save',
                 data: params,
                 success: function (result) {
                     $('#linkForm input').val('');
@@ -135,7 +135,7 @@
             title:'确定删除该链接吗?',
             then: function () {
                 tale.post({
-                    url : '/admin/links/delete',
+                    url: '/blog/admin/links/delete',
                     data: {mid: mid},
                     success: function (result) {
                         if(result && result.code == 'success'){
