--- a/src/main/resources/templates/site/footer.html
+++ b/src/main/resources/templates/site/footer.html
@@ -190,7 +190,7 @@
         if (key == 13) {
             var q = $(this).val();
             if (q && q != '') {
-                window.location.href = '/search/' + q;
+                window.location.href = '/blog/search/' + q;
             }
         }
     });
